# phantom

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  DockerfileBuildEnv  LICENSE  README.md  phantom.pc.in
cmake/: config.hpp.in  cpplint.cmake  git_revision.cmake  libuuid.cmake
src/core/: CMakeLists.txt  bit_manipulation.cpp  bit_manipulation.hpp  const_time.hpp  const_time_disabled.hpp  const_time_enabled.hpp  gf256.cpp  gf256.hpp  gf2n.cpp  gf2n.hpp  limbstring.cpp  limbstring.hpp  mod_metadata.hpp  mp.hpp  mp_gf2n.hpp  mpbase.cpp  mpbase.hpp  mpbase_additive.cpp  mpbase_defines.hpp  mpbase_division.cpp  mpbase_exponentiation.cpp  mpbase_jacobi.cpp  mpbase_mul_fft.cpp  mpbase_multiplication.cpp  mpbase_redc.cpp  mpbase_toom_cook.cpp  mpz.cpp  mpz.hpp  mpz_additive.cpp  mpz_comparative.cpp  mpz_control.cpp  mpz_core.cpp  mpz_core.hpp  mpz_logical.cpp  mpz_multiplicative.cpp  mpz_poly.hpp  ntt.hpp  ntt_binary.cpp  ntt_binary.hpp  number.cpp  (+13 more)
src/crypto/: CMakeLists.txt  aes.cpp  aes.hpp  aes_ccm.cpp  aes_ccm.hpp  aes_ctr.cpp  aes_ctr.hpp  aes_ctr_drbg.cpp  aes_ctr_drbg.hpp  aes_fpe_ff1.hpp  aes_fpe_ff3_1.hpp  aes_gcm.cpp  aes_gcm.hpp  aes_ni.cpp  aes_ni.hpp  aes_storage.hpp  aes_sw.cpp  aes_sw.hpp  csprng.cpp  csprng.hpp  fpe.cpp  fpe.hpp  hash.hpp  hash_sha2.cpp  hash_sha2.hpp  hash_sha3.cpp  hash_sha3.hpp  keccak.cpp  keccak.hpp  random_seed.hpp  sha2.hpp  sha2_core_generic.hpp  sha2_core_ni.hpp  shamirs_secret_sharing.cpp  shamirs_secret_sharing.hpp  symmetric_key_auth_enc.hpp  symmetric_key_enc.hpp  xof.hpp  xof_sha3.cpp  xof_sha3.hpp
src/ecc/: CMakeLists.txt  binary_point.hpp  curves.cpp  curves.hpp  ecc.hpp  edwards_prime_affine.hpp  edwards_prime_projective.hpp  montgomery_prime_affine.hpp  montgomery_prime_projective.hpp  point.hpp  prime_point.cpp  prime_point.hpp  secp_mpz.hpp  weierstrass_binary_affine.hpp  weierstrass_binary_jacobian.hpp  weierstrass_binary_projective.hpp  weierstrass_prime_affine.hpp  weierstrass_prime_jacobian.hpp  weierstrass_prime_projective.hpp
src/fft/: CMakeLists.txt  fft.cpp  fft.hpp  fft_avx2.hpp  fft_factory.hpp  fft_generic.hpp  fft_poly.hpp
src/logging/: CMakeLists.txt  logger.cpp  logger.hpp  tracer.cpp  tracer.hpp
src/ntru/: CMakeLists.txt  ldl.cpp  ldl.hpp  ntru.cpp  ntru.hpp  ntru_master_tree.cpp  ntru_master_tree.hpp  ntru_number.hpp
src/packing/: CMakeLists.txt  packer.cpp  packer.hpp  stream.cpp  stream.hpp  unpacker.cpp  unpacker.hpp
src/rsa/: CMakeLists.txt  ctx_rsa.hpp  rsa_cryptosystem.cpp  rsa_cryptosystem.hpp  rsa_cryptosystem_oaep.hpp  rsa_cryptosystem_rsassa_pss.hpp
src/sampling/: CMakeLists.txt  gaussian.hpp  gaussian_cdf.hpp  gaussian_sampler.cpp  gaussian_sampler.hpp  uniform_sampler.hpp
src/schemes/: CMakeLists.txt  scheme.hpp
src/schemes/ibe/: ibe.hpp
src/schemes/ibe/dlp/: ctx_ibe_dlp.hpp  ibe_dlp.cpp  ibe_dlp.hpp
src/schemes/kem/: kem.hpp
src/schemes/kem/kyber/: ctx_kyber.hpp  kyber_indcpa.cpp  kyber_indcpa.hpp  kyber_kem.cpp  kyber_kem.hpp  kyber_ntt.cpp  kyber_ntt.hpp  kyber_reduce.hpp
src/schemes/kem/saber/: ctx_saber.hpp  saber_indcpa.cpp  saber_indcpa.hpp  saber_kem.cpp  saber_kem.hpp
src/schemes/key_exchange/: key_exchange.hpp
src/schemes/key_exchange/ecdh/: ctx_ecdh.hpp  ecdh_key_exchange.cpp  ecdh_key_exchange.hpp
src/schemes/pke/: pke.hpp
src/schemes/pke/kyber/: ctx_kyber_pke.hpp  kyber_pke.cpp  kyber_pke.hpp
src/schemes/pke/rsaes_oaep/: rsaes_oaep_pke.cpp  rsaes_oaep_pke.hpp
src/schemes/pke/saber/: ctx_saber_pke.hpp  saber_pke.cpp  saber_pke.hpp
src/schemes/signature/: signature.hpp
src/schemes/signature/dilithium/: ctx_dilithium.hpp  dilithium.cpp  dilithium.hpp  dilithium_signature.cpp  dilithium_signature.hpp
src/schemes/signature/ecdsa/: ctx_ecdsa.hpp  ecdsa_signature.cpp  ecdsa_signature.hpp
src/schemes/signature/eddsa/: ctx_eddsa.hpp  eddsa_signature.cpp  eddsa_signature.hpp
src/schemes/signature/falcon/: ctx_falcon.hpp  falcon_signature.cpp  falcon_signature.hpp
src/schemes/signature/rsassa_pss/: rsassa_pss_signature.cpp  rsassa_pss_signature.hpp
test/: CMakeLists.txt
test/functional/: func_aes_ccm.cpp  func_aes_ctr.cpp  func_aes_gcm.cpp  func_ff1.cpp  func_ff3_1.cpp  func_hash.cpp  func_ibe_dlp.cpp  func_kem_kyber.cpp  func_kem_saber.cpp  func_key_exchange_ecdh.cpp  func_pke_kyber.cpp  func_pke_rsaes_oaep.cpp  func_pke_saber.cpp  func_shamirs_secret_sharing.cpp  func_sig_dilithium.cpp  func_sig_ecdsa.cpp  func_sig_eddsa.cpp  func_sig_falcon.cpp  func_sig_rsassa_pss.cpp  gen_ecdsa_dual.cpp
test/kat/: kat_aes_ccm.cpp  kat_aes_ctr.cpp  kat_aes_ecb.cpp  kat_aes_ff1.cpp  kat_aes_ff3.cpp  kat_aes_gcm.cpp  kat_sha2.cpp  kat_sha3.cpp  kat_shake.cpp
test/performance/: main.cpp  perf_aes.cpp  perf_aes.hpp  perf_ibe.cpp  perf_ibe.hpp  perf_kem.cpp  perf_kem.hpp  perf_kex.cpp  perf_kex.hpp  perf_key_exchange.cpp  perf_key_exchange.hpp  perf_metrics.cpp  perf_metrics.hpp  perf_pke.cpp  perf_pke.hpp  perf_pke_plot.py  perf_sha2.cpp  perf_sha2.hpp  perf_sha3.cpp  perf_sha3.hpp  perf_shake.cpp  perf_shake.hpp  perf_sig.cpp  perf_sig.hpp
test/tuning/: tuning_mul.cpp
test/unit/: unit_aes.cpp  unit_aes_ccm.cpp  unit_aes_ctr.cpp  unit_aes_gcm.cpp  unit_binary_ecc.cpp  unit_bit_manipulation.cpp  unit_build_info.cpp  unit_csprng.cpp  unit_curve25519_ecc.cpp  unit_dilithium.cpp  unit_ecdh.cpp  unit_eddsa.cpp  unit_edwards_prime_affine.cpp  unit_edwards_prime_projective.cpp  unit_ff1.cpp  unit_ff3_1.cpp  unit_montgomery_prime_affine.cpp  unit_montgomery_prime_projective.cpp  unit_mp_gf2n.cpp  unit_mpbase.cpp  unit_mpz_additive.cpp  unit_mpz_comparative.cpp  unit_mpz_logical.cpp  unit_mpz_multiplicative.cpp  unit_number_additive.cpp  unit_number_algorithms.cpp  unit_number_multiplicative.cpp  unit_prime_ecc.cpp  unit_reduction_barrett.cpp  unit_reduction_montgomery.cpp  unit_rsaes_oaep.cpp  unit_rsassa_pss.cpp  unit_sha2.cpp  unit_sha3.cpp  unit_shamirs_secret_sharing.cpp  unit_weierstrass_binary_affine.cpp  unit_weierstrass_binary_jacobian.cpp  unit_weierstrass_binary_projective.cpp  unit_weierstrass_prime_affine.cpp  unit_weierstrass_prime_jacobian.cpp  (+2 more)
(+45 files in other folders)
